pkl-core/src/test/files/LanguageSnippetTests/input/errors/invalidGlobRead3.pkl
res = read*("https://www.google.com/**.pkl")
